--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "CYFighter-Zesty-Green-Falacious-Refuse"
 version = "0.1.0"
-authors = ["Victor \"VoxWave\" Bankowski <victor_bankowski@hotmail.com>"]
+authors = ["Victor \"VoxWave\" Bankowski <victor_bankowski@hotmail.com>, Delma, Atte Haarni, Tubaias"]
 
 [dependencies]
 piston_window = "0.80"
-nalgebra = "0.16.4"
-specs = "0.12.3"
-specs-derive = "0.2.0"
+nalgebra = "0.16"
+specs = "0.12"
+specs-derive = "0.2"
+shrev = "1.0"
